[package]
name = "myrust"
version = "0.1.0"
authors = ["artem"]

[[bin]]
name = "hello_world"
path = "src/hello_world.rs"

[[bin]]
name = "variables_and_mutability"
path = "src/variables_and_mutability.rs"

[[bin]]
name = "data_types"
path = "src/data_types.rs"

[[bin]]
name = "data_types_prg"
path = "src/data_types_prg.rs"

[[bin]]
name = "functions"
path = "src/functions.rs"

[[bin]]
name = "expressions"
path = "src/expressions.rs"

[[bin]]
name = "ownership"
path = "src/ownership.rs"
