[package]
name = "myrust"
version = "0.1.0"
authors = ["artem"]

[[bin]]
name = "hello_world"
path = "src/hello_world.rs"

[[bin]]
name = "variables_and_mutability"
path = "src/variables_and_mutability.rs"

[[bin]]
name = "data_types"
path = "src/data_types.rs"

[[bin]]
name = "data_types_prg"
path = "src/data_types_prg.rs"

[[bin]]
name = "functions"
path = "src/functions.rs"

[[bin]]
name = "expressions"
path = "src/expressions.rs"

[[bin]]
name = "ownership"
path = "src/ownership.rs"

[[bin]]
name = "structs"
path = "src/structs.rs"

[[bin]]
name = "enums"
path = "src/enums.rs"

[[bin]]
name = "control_flow"
path = "src/control_flow.rs"

[[bin]]
name = "crate_tree"
path = "src/crate_tree.rs"

[[bin]]
name = "vectors"
path = "src/vectors.rs"

[[bin]]
name = "strings"
path = "src/strings.rs"

[[bin]]
name = "hash_map"
path = "src/hash_map.rs"

[[bin]]
name = "exercises"
path = "src/exercises.rs"

[[bin]]
name = "error_handling"
path = "src/error_handling.rs"

[[bin]]
name = "generics"
path = "src/generics.rs"

[[bin]]
name = "traits"
path = "src/traits.rs"

[[bin]]
name = "lifetimes"
path = "src/lifetimes.rs"

[[bin]]
name = "tests"
path = "src/tests.rs"

[[bin]]
name = "closures"
path = "src/closures.rs"

[[bin]]
name = "iterators"
path = "src/iterators.rs"

[[bin]]
name = "smart_pointers_boxes"
path = "src/smart_pointers_boxes.rs"

[[bin]]
name = "destructors"
path = "src/destructors.rs"

[[bin]]
name = "smart_pointers_rc"
path = "src/smart_pointers_rc.rs"

[[bin]]
name = "reference_cycles"
path = "src/reference_cycles.rs"

[[bin]]
name = "threads"
path = "src/threads.rs"

[[bin]]
name = "shared_state_concurrency"
path = "src/shared_state_concurrency.rs"

[[bin]]
name = "polymorphism"
path = "src/polymorphism.rs"

[dependencies]
unicode-segmentation = "1.3"
rand = "0.8.3"

